# PayoutSystem

./: README.md  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml
config/: .env  .env.example  celery.py  settings.py  urls.py
modules/payouts/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
modules/payouts/migrations/: 0001_initial.py
modules/payouts/tests/: tests.py
